--- a/Modeling Project Problem 2/.project
+++ b/Modeling Project Problem 2/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Modeling Project</name>
+	<name>Modeling Project Problem 2</name>
 	<comment></comment>
 	<projects>
 	</projects>
