--- a/Modeling Project Problem 2/.classpath
+++ b/Modeling Project Problem 2/.classpath
@@ -2,5 +2,10 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="F:/Year3/Modeling and Simulation/jfreechart-1.0.1/lib/gnujaxp.jar"/>
+	<classpathentry kind="lib" path="F:/Year3/Modeling and Simulation/jfreechart-1.0.1/lib/jcommon-1.0.0.jar"/>
+	<classpathentry kind="lib" path="F:/Year3/Modeling and Simulation/jfreechart-1.0.1/lib/jfreechart-1.0.1.jar"/>
+	<classpathentry kind="lib" path="F:/Year3/Modeling and Simulation/jfreechart-1.0.1/lib/junit.jar"/>
+	<classpathentry kind="lib" path="F:/Year3/Modeling and Simulation/jfreechart-1.0.1/lib/servlet.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
